--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="signup">SignUp</string>
     <string name="user_name">User Name</string>
     <string name="user_email">User Email</string>
+    <string name="chat">Chat</string>
 </resources>
